# bookinator

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  batch_organize.py  cleanup_manifest.py  flake.nix  monitor_scan.sh  monitor_upload.sh  plan.md  pyproject.toml  ralph.sh  ralph_log.md
.github/workflows/: ci.yml
k8s/: books-web.yaml  books-worker.yaml  network-policy.yaml
src/bookstuff/: __init__.py  classifier.py  cli.py  dedup.py  filter.py  manifest.py  reorganizer.py  scanner.py  uploader.py
src/bookstuff/web/: app.py  embeddings.py  index.py  password.py  preview.py  semantic.py  worker.py
src/bookstuff/web/static/: style.css
src/bookstuff/web/templates/: base.html  book.html  index.html
tests/: test_batch_organize.py  test_classifier.py  test_cli.py  test_dedup.py  test_filter.py  test_integration.py  test_manifest.py  test_password.py  test_reorganizer.py  test_scanner.py  test_semantic.py  test_uploader.py  test_web_app.py  test_web_index.py  test_web_preview.py
