[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bookstuff"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "click",
  "anthropic",
  "ebooklib",
  "pymupdf",
  "flask",
  "argon2-cffi",
]

[project.optional-dependencies]
semantic = [
  "sqlite-vec",
]

[project.scripts]
bookstuff = "bookstuff.cli:cli"
bookstuff-web = "bookstuff.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bookstuff.web" = ["templates/*.html", "static/*.css", "static/*.png"]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
